--- a/.github/workflows/IPQ60XX-6.12-WIFI.yml
+++ b/.github/workflows/IPQ60XX-6.12-WIFI.yml
@@ -8,7 +8,7 @@ on:
 env:
   REPO_URL: https://github.com/LiBwrt/openwrt-6.x.git
   REPO_BRANCH: kernel-6.12
-  CONFIG_FILE: configs/ipq60xx-6.12-wifi.config
+  CONFIG_FILE: configs/ress01.config
   DIY_SCRIPT: diy-script0.sh
   CLASH_KERNEL: amd64
   CACHE_TOOLCHAIN: true
